poems - fix view all link alignment

--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -404,6 +404,10 @@ a.panel-footer-link {
     text-align: center;
 }
 
+.panel.preview-poems > a.panel-footer-link {
+    flex-basis: 100%;
+}
+
 /* panel/preview-wrappable-list */
 .preview-wrappable-list {
     display: flex;
